[gd_scene load_steps=28 format=3 uid="uid://dp752bqrmwkuc"]

[ext_resource type="Shader" path="res://Shaders/outline.gdshader" id="1_j4lvs"]
[ext_resource type="Script" path="res://shop_item.gd" id="1_k81h2"]
[ext_resource type="Resource" uid="uid://defhgda6tnv8i" path="res://player_info.tres" id="2_d5lj2"]
[ext_resource type="Texture2D" uid="uid://b4pocmod4wqft" path="res://Resources/Items/health_potion_medium.png" id="2_xxc2p"]
[ext_resource type="Theme" uid="uid://nh2gs2ko17dl" path="res://Themes/main_theme.tres" id="5_sjapi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cwdq1"]
resource_local_to_scene = true
shader = ExtResource("1_j4lvs")
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/enable_shader = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ggij8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1k8pg"]

[sub_resource type="Animation" id="Animation_qnkld"]
resource_name = "Deny"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(-1, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Item:material:shader_parameter/outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.905882, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_bkdel"]
resource_name = "Floating"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1), Vector2(0, 0), Vector2(0, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Item:material:shader_parameter/outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rf0bq"]
resource_name = "Purchased"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Item:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Item:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Item:material:shader_parameter/enable_shader")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hfefg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Item:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Item:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Item:material:shader_parameter/enable_shader")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Item:material:shader_parameter/outline_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1gel4"]
_data = {
"Deny": SubResource("Animation_qnkld"),
"Floating": SubResource("Animation_bkdel"),
"Purchased": SubResource("Animation_rf0bq"),
"RESET": SubResource("Animation_hfefg")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x64i4"]

[sub_resource type="Animation" id="Animation_dmeua"]
length = 0.001

[sub_resource type="Animation" id="Animation_hm3n4"]
resource_name = "capacity_description"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Inventory Full!
"]
}

[sub_resource type="Animation" id="Animation_gyyjf"]
resource_name = "health_potion_large_description"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["This is a large health potion. It restores 25 HP when consumed."]
}

[sub_resource type="Animation" id="Animation_wo4ru"]
resource_name = "health_potion_medium_description"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["This is a medium health potion. It restores 15 HP when consumed."]
}

[sub_resource type="Animation" id="Animation_dblxc"]
resource_name = "health_potion_small_description"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["This is a small health potion. It restores 5 HP when consumed."]
}

[sub_resource type="Animation" id="Animation_nuf7i"]
resource_name = "money_description"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Insufficient Money!"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i01cw"]
_data = {
"RESET": SubResource("Animation_dmeua"),
"capacity_description": SubResource("Animation_hm3n4"),
"health_potion_large_description": SubResource("Animation_gyyjf"),
"health_potion_medium_description": SubResource("Animation_wo4ru"),
"health_potion_small_description": SubResource("Animation_dblxc"),
"money_description": SubResource("Animation_nuf7i")
}

[sub_resource type="Animation" id="Animation_iw3sm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-60, -40)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(120, 24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:pivot_offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(100, 0)]
}

[sub_resource type="Animation" id="Animation_ldwkb"]
resource_name = "close_description_box"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_p2onc"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_a3vlm"]
resource_name = "pop_description_box"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible_characters")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(-60, -40), Vector2(-100, -40)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(200, 24)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:pivot_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(100, 24)]
}

[sub_resource type="Animation" id="Animation_qstor"]
resource_name = "visible_text"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bldgn"]
_data = {
"RESET": SubResource("Animation_iw3sm"),
"close_description_box": SubResource("Animation_ldwkb"),
"default": SubResource("Animation_p2onc"),
"pop_description_box": SubResource("Animation_a3vlm"),
"visible_text": SubResource("Animation_qstor")
}

[node name="ShopItem" type="Area2D"]
z_index = 1
collision_layer = 0
collision_mask = 64
script = ExtResource("1_k81h2")
player_info = ExtResource("2_d5lj2")
shop_type = 1

[node name="Item" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_cwdq1")
texture = ExtResource("2_xxc2p")

[node name="InteractRadius" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ggij8")

[node name="Purchase" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="PurchaseRadius" type="CollisionShape2D" parent="Purchase"]
shape = SubResource("RectangleShape2D_1k8pg")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1gel4")
}

[node name="Price" type="Label" parent="."]
z_index = 200
offset_left = -42.0
offset_top = -6.0
offset_right = -2.0
offset_bottom = 6.0
theme = ExtResource("5_sjapi")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_x64i4")
text = "NULL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemDescription" type="Label" parent="."]
z_index = 200
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(100, 0)
theme = ExtResource("5_sjapi")
theme_override_font_sizes/font_size = 8
text = "This is a large health potion. It restores 25 HP when consumed."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LabelAnimator" type="AnimationPlayer" parent="ItemDescription"]
libraries = {
"": SubResource("AnimationLibrary_i01cw")
}

[node name="BoxAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../ItemDescription")
libraries = {
"": SubResource("AnimationLibrary_bldgn")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="area_entered" from="Purchase" to="." method="_on_purchase_area_entered"]
